<resources>
    <string name="app_name">PlantScan</string>
    <string name="failed">Failed</string>
    <string name="camera_x">CameraX</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Pilih Gambar dari Gallery</string>
    <string name="analyze">Analisis!</string>
    <string name="result">Hasil Analisis</string>
    <string name="classifier_failed">Detail Hasil Analisis</string>
    <string name="insert_image">Silahkan Masukkan Gambar</string>
    <string name="ucrop_null">UCrop result URI is null</string>
    <string name="error_msg">Error</string>
    <string name="error_crop">Gagal Crop Gambar</string>
    <string name="email">raytamaaditya@gmail.com</string>
    <string name="title_information">Information</string>
    <string name="title_home">Home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buah_name">Nama Buah</string>
    <string-array name="description">
        <item>tahukah kamu?</item>
        <item>tahukah kamu?</item>
        <item>tahukah kamu?</item>
        <item>tahukah kamu?</item>
        <item>tahukah kamu?</item>
        <item>tahukah kamu?</item>
        <item>tahukah kamu?</item>
        <item>tahukah kamu?</item>
        <item>tahukah kamu?</item>
        <item>tahukah kamu?</item>
        <item>tahukah kamu?</item>
        <item>tahukah kamu?</item>
        <item>tahukah kamu?</item>
        <item>tahukah kamu?</item>
        <item>tahukah kamu?</item>
        <item>tahukah kamu?</item>
    </string-array>
    <string name="title_tips">Deskripsi</string>
    <string name="title_tip_detail">Deskripsi</string>
    <string name="default_title">Judul Default</string>
    <string name="default_description">Deskripsi Default</string>
    <string name="image_description">Deskripsi Gambar</string>
    <string name="tip_image">Image</string>
    <string name="title_history">History</string>
    <string name="delete_button">Delete</string>
    <string name="TextPi">Halo semuaaaaaaaa,Aplikasi ini adalah  proyek akhir Penelitian Ilmiah ,aplikasi ini dapat digunakan untuk klasifikasi penyakit dari Tumbuhan seperti (Tomat,Jagung,Kedelai dan Kubis) </string>
    <string-array name="Name">
        <item>Tomato Healthy</item>
        <item>Tomato Septoria Leaf Spot</item>
        <item>Tomato Bacterial Spot</item>
        <item>Tomato Blight</item>
        <item>Tomato Spider Mite</item>
        <item>Tomato Leaf Mold</item>
        <item>Tomato Yellow Leaf Curl Virus</item>
        <item>Cabbage Healthy</item>
        <item>Cabbage Black Rot</item>
        <item>Soy Frogeye Leaf Spot</item>
        <item>Soy Downy Mildew</item>
        <item>Soy Healthy</item>
        <item>Maize Ravi Corn Rust</item>
        <item>Maize Healthy</item>
        <item>Maize Grey Leaf Spot</item>
        <item>Maize Lethal Necrosis</item>
    </string-array>
    <string name="tomato_healthy_description">
        Tomato Healthy atau bisa kita sebut juga dengan Tomat sehat merupakan salah satu tanaman yang memiliki segudang manfaat untuk tubuh selain mengurangi risiko terkena penyakit kangker,Tomat juga bermanfaat untuk Kesehatan jantung ,menurunkan tekanan darah dan Mencegah penuaan dini pada kulit,Oleh karena itu ,banyak orang yang ingin membudidayakanya di rumah dengan mengetahui cara merawat tanaman Tomat agar sehat Untuk merawat tanaman tomat, penting untuk memperhatikan beberapa hal:\n
        1. Suhu optimal untuk tomat adalah 22ºC hingga 29°C.\n
        2. Tanaman tomat membutuhkan cahaya matahari tinggi selama 10-12 jam sehari.\n
        3. Hindari genangan air yang berlebihan.\n
        4. Penyiangan tanaman tomat perlu dilakukan secara rutin, dua hingga tiga minggu sekali, atau ketika tanaman berusia 15-30 hari.\n
        5. Pemupukan dilakukan dengan pupuk NPK Daun atau kompos setiap 30 hari sekali.\n
        6. Kontrol hama dan penyakit dengan insektisida agar tanaman tetap sehat.\n
        Sumber : katadata.co.id
    </string>
    <string name="tomato_septoria_leaf_spot_description">
        Tomato Septoria Leaf Spot, atau Tomat Bercak Daun Septoria, adalah penyakit jamur yang menyebabkan bercak hitam atau coklat pada daun tua bagian bawah tanaman, tetapi tidak pada buah. Penyakit ini dapat menyebar cepat, mempengaruhi pertumbuhan baru, dan membuat tanaman rentan terhadap sengatan matahari. Penyakit ini umum terjadi di kondisi taman yang hangat dan lembab. Untuk mencegah dan mengobati penyakit ini, lakukan hal berikut:\n
        • Hapus daun yang terinfeksi dan pastikan mencuci tangan serta alat pemotong sebelum memangkas tanaman yang sehat.\n
        • Pertimbangkan penggunaan fungisida organik seperti tembaga atau kalium bikarbonat untuk mencegah penyebaran.\n
        • Pertimbangkan juga fungisida kimia.\n
        • Gunakan benih bebas penyakit.\n
        • Mulailah dengan taman yang bersih.\n
        • Sediakan ruang untuk sirkulasi udara yang baik.\n
        • Gunakan baking soda dan minyak nabati.\n
        Sumber : www-thespruce-com
    </string>
    <string name="tomato_bacterial_spot_description">
        Tomato Bacterial Spot, atau Tomat Bercak Bakteri, adalah penyakit umum yang menyerang tomat di seluruh dunia. Penyakit ini dapat mengurangi hasil panen dan mempengaruhi kualitas buah. Gejalanya termasuk bintik hitam kecil pada daun dan buah. Bintik pada daun bisa dikelilingi lingkaran kuning, sementara bintik pada buah bisa berwarna coklat hingga hitam dengan lingkaran cahaya hijau atau kuning.\n
        Untuk mencegah penyakit ini:\n
        • Gunakan benih berkualitas tinggi dan bebas patogen.\n
        • Jika benih terkontaminasi, rendam dalam air panas (122°F selama 25 menit).\n
        • Hindari penyiraman dari atas, gunakan air hujan atau selang tetes.\n
        • Tangani tanaman hanya saat kering dan disinfeksi peralatan berkebun secara rutin dengan pemutih 10% atau alkohol 70%.\n
        • Buang sisa-sisa tanaman yang terkontaminasi di akhir musim tanam.\n
        • Gunakan rotasi tanaman non inang untuk musim tanam berikutnya.\n
        sumber : hort-extension-wisc-edu.
    </string>
    <string name="tomato_blight_description">
        Tomato Blight, atau Tomat Busuk, dapat disebabkan oleh serangga dan cendawan. Serangga seperti lalat buah dan ulat memakan kulit dan daging buah, sementara cendawan seperti Colletotrichum coccodes dan Thanatephorus cucumeris menyebabkan busuk buah antraknosa dan rhizoctonia.\n
        Gejala busuk buah meliputi bercak kecil berair yang membesar dan menjadi coklat hitam, serta bercak ungu di dekat tangkai buah.\n
        Cara mengendalikan busuk buah pada tomat:\n
        • Pilih benih yang tahan penyakit.\n
        • Lakukan rotasi tanaman atau sistem tanam tumpangsari.\n
        • Bersihkan gulma dan tanaman yang sakit dengan mencabut dan membakarnya.\n
        • Berikan tiang lanjaran agar tanaman tidak menyentuh tanah.\n
        • Gunakan air bersih untuk penyiraman.\n
        • Jangan memendam tanaman yang sakit di area penanaman tomat.\n
        • Semprotkan fungisida setiap minggu.\n
        Sumber: www.infarm.co.id
    </string>
    <string name="tomato_spider_mite_description">
        Tomato Spider Mite atau Tungau Laba-laba Daun Tomat (Tetranychus urticae) adalah hama umum yang sulit dikenali karena ukurannya kecil. Mereka termasuk arakhnida, bukan serangga, dan dapat menghasilkan jaring sutra halus. Warnanya bervariasi dari merah, hijau, kuning, oranye, hingga coklat.\n
        Langkah-langkah untuk merawat tanaman tomat yang terserang tungau laba-laba:\n
        1. Pemeriksaan rutin: Periksa tanaman secara rutin untuk deteksi dini.\n
        2. Kebersihan tanaman: Jaga kebersihan dan buang daun yang terinfeksi.\n
        3. Meningkatkan kelembaban: Siram tanaman dengan air untuk mengurangi populasi tungau.\n
        4. Penggunaan sabun insektisida: Semprot tanaman dengan larutan sabun insektisida.\n
        5. Minyak neem: Gunakan minyak neem yang dicampur dengan air dan semprotkan.\n
        6. Predator alami: Introduksi predator alami seperti ladybugs atau lacewings.\n
        7. Rotasi tanaman: Hindari menanam tomat di tempat yang sama setiap tahun.\n
        8. Insektisida kimia: Gunakan insektisida kimia jika infestasi parah.\n
        Dengan langkah-langkah ini, Anda dapat mengurangi dan mengendalikan serangan tungau laba-laba pada tanaman tomat Anda.\n
        Sumber :www-planetnatural-com
    </string>
    <string name="tomato_leaf_mold_description">
        Tomato Leaf Mold atau Jamur Daun pada Tomat adalah penyakit yang menyerang daun, batang, akar, dan buah, membuat tanaman lemah dan mati. Jamur menyebar melalui spora yang terbawa angin dan berkembang biak dalam cuaca lembab. Beberapa jenis jamur yang sering menyerang tomat adalah:\n
        1. **Busuk Daun**: Disebabkan oleh jamur Phytophthora infestans, menyerang di kelembaban tinggi dan suhu dingin. Gejala: bintik-bintik basah yang menyebar menjadi bercak hitam keunguan. Pengendalian: pembersihan, membuang tanaman terinfeksi, dan fungisida.\n
        2. **Bercak Kering Alternaria**: Disebabkan oleh jamur Alternaria solani, ditandai dengan bercak cokelat dan hitam pada daun bagian bawah. Penyebaran: cuaca hangat dan basah. Pengendalian: fungisida.\n
        3. **Antraknosa**: Disebabkan oleh jamur Colletotrichum coccodes, menyerang tomat yang masak. Gejala: bintik-bintik cekung melingkar dengan pinggiran hitam. Pengendalian: fungisida.\n
        4. **Layu Fusarium**: Disebabkan oleh jamur Fusarium oxysporum, menginfeksi melalui akar dan menyumbat jaringan penghantar air. Gejala: daun menguning, layu, dan rontok. Pengendalian: tidak spesifik.\n
        5. **Layu Verticillium**: Disebabkan oleh jamur Verticillium dahliae, menghalangi jaringan penghantar air. Gejala: tanaman terhambat, melemah, dan mati. Pengendalian: tidak spesifik.\n
        Untuk mencegah dan mengendalikan penyakit jamur, gunakan benih tahan penyakit, lakukan rotasi tanaman, bersihkan tanaman terinfeksi, dan gunakan fungisida sesuai kebutuhan.\n
        sumber : www.corteva.id
    </string>
    <string name="tomato_yellow_leaf_curl_virus_prevention">
        Tomato Yellow Leaf Curl Virus (TYLCV) atau Virus Kuning Keriting Daun Tomat menyebabkan pengerdilan daun dan pucuk muda pada tahap pembibitan, serta percabangan berlebihan, daun tebal dan keriput, dan klorosis kekuningan pada daun yang lebih tua. Infeksi sebelum berbunga mengurangi jumlah buah. Virus ini disebarkan oleh lalat putih Bemisia tabaci yang memakan daun bagian bawah dan lebih aktif pada cuaca kering dengan suhu tinggi. Pencegahan mencakup penggunaan varietas tahan, penanaman lebih awal, tumpang sari dengan tanaman tidak rentan, penggunaan jaring, pemasangan mulsa, perangkap plastik kuning, pemantauan dan pemusnahan tanaman sakit, serta rotasi tanaman.\n
        Tindakan Pencegahan\n
        - Gunakan varietas yang tahan atau toleran.\n
        - Lakukan penanaman lebih awal untuk menghindari populasi puncak kutu kebul.\n
        - Terapkan tumpang sari dengan tanaman-tanaman yang tidak rentan seperti labu dan mentimun.\n
        - Gunakan jaring untuk menutupi persemaian dan mencegah lalat putih menghinggapi tanaman Anda.\n
        - Hindari menanam tanaman inang alternatif yang dekat dengan tanaman Anda.\n
        - Pasang mulsa pada persemaian atau lahan untuk memutus siklus hidup kutu kebul.\n
        - Gunakan perangkap plastik kuning lengket untuk menangkap serangga secara massal.\n
        - Pantau lahan, petik tanaman yang sakit dan kuburkan jauh dari lahan.\n
        - Musnahkan gulma di dalam dan di sekitar lahan.\n
        - Bajak atau bakar seluruh sisa tanaman setelah panen.\n
        - Lakukan rotasi dengan tanaman yang tidak rentan.\n
    </string>
</resources>