<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.myappplant.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.myappplant.tips.TipsFragment"
        android:label="@string/title_information"
        tools:layout="@layout/fragment_tips" />

    <!-- Definisi untuk TipsFragment -->
    <fragment
        android:id="@+id/tipsFragment"
        android:name="com.example.myappplant.tips.TipsFragment"
        android:label="@string/title_tips"
        tools:layout="@layout/fragment_tips">
        <action
            android:id="@+id/action_tipsFragment_to_tipDetailFragment"
            app:destination="@id/tipDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/tipDetailFragment"
        android:name="com.example.myappplant.tips.TipDetailFragment"
        android:label="@string/title_tip_detail"
        tools:layout="@layout/fragment_tip_detail" />

    <fragment
        android:id="@+id/nav_history"
        android:name="com.example.myappplant.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" >
    <action
        android:id="@+id/action_navigation_home_to_nav_history"
        app:destination="@id/nav_history" />
    </fragment>
</navigation>